@@ -10,6 +10,7 @@ CHANGE: Core  | Improved handling of mixed IPv4 and IPv6 bindings [The 8472]
 CHANGE: UI    | The comment icon column now displays a blank icon if there is no comment (rather than no icon) [amc1]
 CHANGE: Plug  | Essential plugins are now automatically re-enabled if previously disabled by user [amc1]
                  - the "Start / Stop Rules" plugin was disabled by users in the past, this was causing torrents to be stuck in "waiting" state
+CHANGE: Plug  | New command line option - "azureus.safemode", to disable lots of functionality when debugging problems [amc1]                 
 CHANGE: Plug  | Client ID plugin is removed [amc1]
 CHANGE: Plug  | New command line option - "azureus.loadplugins", to skip plugins being loaded at startup [amc1]
 CHANGE: UIv3  | Faster UI Startup [TuxPaper]
